number input style adjustments

--- a/src/app/components/common/TextInput.scss
+++ b/src/app/components/common/TextInput.scss
@@ -19,6 +19,16 @@
             color: #888;
         }
 
+        &[type='number']{
+
+            text-align: center;
+
+            &::placeholder {
+                text-align: left;
+            }
+
+        }
+
     }
 
     .error {
