--- a/src/app/pages/admin.scss
+++ b/src/app/pages/admin.scss
@@ -2,7 +2,15 @@
 @import '../components/common/variables';
 
 .admin {
+
     min-height: 100vh;
     padding-bottom: 100px;
     position: relative;
+
+    .inner {
+        max-width: 640px;
+        margin: 0 auto;
+        padding: 15px;
+    }
+
 }
