--- a/src/app/pages/cart.scss
+++ b/src/app/pages/cart.scss
@@ -13,4 +13,19 @@
         padding: 15px;
     }
 
+    :global {
+
+        .Toastify__toast {
+            margin-bottom: .75rem;
+            padding: 10px;
+            font-size: .9em;
+            font-weight: 300;
+        }
+
+        .Toastify__toast--error {
+            background: #D45853;
+        }
+
+    }
+
 }
