--- a/src/app/pages/cart.scss
+++ b/src/app/pages/cart.scss
@@ -26,6 +26,11 @@
             background: #D45853;
         }
 
+        .Toastify__toast-body b {
+            font-size: 1.05em;
+            marign: 0 2px;
+        }
+
     }
 
 }
