--- a/src/app/pages/products.scss
+++ b/src/app/pages/products.scss
@@ -1,7 +1,7 @@
 @import '../components/common/global';
 @import '../components/common/variables';
 
-.admin {
+.products {
 
     min-height: 100vh;
     padding-bottom: 100px;
