--- a/src/app/pages/products.scss
+++ b/src/app/pages/products.scss
@@ -6,6 +6,7 @@
     min-height: 100vh;
     padding-bottom: 100px;
     position: relative;
+    background: #f5f5f5;
 
     .inner {
         max-width: 640px;
