--- a/src/app/pages/cart.scss
+++ b/src/app/pages/cart.scss
@@ -21,7 +21,7 @@
 
     .actions {
 
-        flex: 1;
+        flex: 2;
 
         @media (min-width: $tablet) {
             margin: 0 15px;
@@ -31,11 +31,15 @@
 
     .products {
 
-        flex: 1;
+        flex: 3;
         margin-bottom: 50px;
 
         @media (min-width: $tablet) {
             margin: 0 15px;
+        }
+
+        .product {
+            display: flex;
         }
 
     }
